Fix styling on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -113,6 +113,14 @@ code {
     background-color: var(--gray-3) !important;
 }
 
+iframe {
+    max-width: 100%;
+}
+
+.wrapper {
+    overflow-x: scroll;
+}
+
 table {
     margin-block: var(--size-2);
 
@@ -134,6 +142,8 @@ table {
 }
 
 a[role="button"] {
+    display: inline-block;
+    margin-block: var(--size-2);
     margin-inline-end: var(--size-2);
     padding: var(--size-2) var(--size-3);
     background-color: var(--blue-7);
